tests/ok/for-iterator-owning-try.ari
impl Drop for i64 {
  fn drop(self) -> void {
    return;
  }
}

struct Cursor {
  token: own i64,
  mut current: i64,
  end: i64,
}

fn make_owned(value: i64) -> own i64 {
  value
}

impl Iterator[i64] for Cursor {
  fn next(self: ref mut Self) -> Option[i64] {
    if self.current < self.end {
      let value = self.current;
      self.current = self.current + 1;
      return Some(value);
    }
    return None<i64>();
  }
}

fn maybe(flag: bool) -> Option[i64] {
  if flag {
    return Some(9);
  }
  return None<i64>();
}

fn scan(flag: bool) -> Option[i64] {
  let cursor = Cursor { token: make_owned(55), current: 1, end: 2 };
  var total = 0;
  for value in cursor {
    let extra = maybe(flag)?;
    total = total + value + extra;
  }
  return Some(total);
}

fn main() -> i64 {
  let missing = scan(false) ?? 77;
  let found = scan(true) ?? 0;
  return missing + found;
}
