tests/errors/init-while-own-overwrite.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  init token = make_owned(0), i = 0 while i < 1 {
  } next make_owned(1), i + 1

  drop token;
  return i;
}
